# melocoton

./: .credo.exs  .deps_audit_ignore  .editorconfig  .gitignore  CNAME  Cargo.toml  LICENSE  README.md  build.ps1  build.sh  flake.nix  index.html  justfile  mise.toml  mix.exs  package-lock.json  package.json
.github/workflows/: build-dmg.yaml  build-releases.yaml  burrito-check.yaml  ci-webapp.yaml
assets/: package-lock.json  package.json  tailwind.config.js
assets/css/: app.css
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs
lib/: melocoton.ex  melocoton_web.ex
lib/melocoton/: ai.ex  application.ex  connection.ex  database_client.ex  databases.ex  export_store.ex  pool.ex  settings.ex  shortcuts.ex  transaction_session.ex
lib/melocoton/ai/: minimax_provider.ex  models.ex  ollama.ex  opencode.ex
lib/melocoton/behaviours/: engine.ex
lib/melocoton_web/: endpoint.ex  router.ex
rel/: vm.args.eex
src/: main.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test/: test_helper.exs
test/melocoton/: ai_test.exs  connection_test.exs  database_client_test.exs  databases_test.exs  pool_test.exs  transaction_session_test.exs
test/support/: conn_case.ex  container_helper.ex
ui/: appwindow.slint
views/: index.html  main.js  styles.css
webapp/: .gitignore  README.md  mix.exs
webapp/assets/: package-lock.json  package.json  tailwind.config.js
webapp/assets/css/: app.css
webapp/config/: test.exs
webapp/lib/: melocoton_web.ex
webapp/test/: test_helper.exs
(+118 files in other folders)
